--- a/K8S/ingress-srv.yaml
+++ b/K8S/ingress-srv.yaml
@@ -30,3 +30,10 @@ spec:
                 name: students-clusterip-srv
                 port:
                   number: 8080
+          - path: /api/Event
+            pathType: Prefix
+            backend:
+              service:
+                name: events-clusterip-srv
+                port:
+                  number: 8080
