--- a/K8S/events-depl.yaml
+++ b/K8S/events-depl.yaml
@@ -32,7 +32,7 @@ spec:
     protocol: TCP
     port: 8080
     targetPort: 8080
-  # - name: plafromgrpc
-  #   protocol: TCP
-  #   port: 666
-  #   targetPort: 666
+  - name: plafromgrpc
+    protocol: TCP
+    port: 666
+    targetPort: 666
