--- a/K8S/events-depl.yaml
+++ b/K8S/events-depl.yaml
@@ -18,6 +18,13 @@ spec:
           env:
             - name: MONGODB_CONNECTION_STRING
               value: "mongodb://mongodb-clusterip-srv:27017"
+            - name: JWT_KEY
+              value: "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3"
+            - name: JWT_ISSUER
+              value: "http://nannies-clusterip-srv:8080"
+            - name: JWT_AUDIENCES
+              value: "http://nannies-clusterip-srv:8080,http://students-clusterip-srv:8080,http://events-clusterip-srv:8080"
+---
 ---
 apiVersion: v1
 kind: Service
