Add gRPC Packages and setup gRPC serer location

--- a/StudentsService/appsettings.Production.json
+++ b/StudentsService/appsettings.Production.json
@@ -18,5 +18,6 @@
     ]
   },
   "RabbitMQHost": "rabbitmq-clusterip-srv",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "GrpcPlatform": "http://events-clusterip-srv:666"
 }
