--- a/StudentsService/StudentsService.csproj
+++ b/StudentsService/StudentsService.csproj
@@ -23,6 +23,13 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0" />
+	<PackageReference Include="Grpc.Net.Client" Version="2.48.0" />
+	<PackageReference Include="Grpc.Tools" Version="2.48.0" PrivateAssets="All" />
+	<PackageReference Include="Google.Protobuf" Version="3.21.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+	 <Protobuf Include="Protos/assess_student.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
