--- a/StudentsService/appsettings.Development.json
+++ b/StudentsService/appsettings.Development.json
@@ -17,5 +17,6 @@
     ]
   },
   "RabbitMQHost": "localhost",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "GrpcPlatform": "http://localhost:8080"
 }
