Fix MongoDb Persistance

--- a/K8S/local-mongodb-pvc.yaml
+++ b/K8S/local-mongodb-pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mongodb-claim
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 200Mi
