--- a/K8S/mongodb-depl.yaml
+++ b/K8S/mongodb-depl.yaml
@@ -18,6 +18,11 @@ spec:
           env:
             - name: MONGODB_CONNECTION_STRING
               value: "mongodb://mongodb-clusterip-srv:27017"
+          ports:
+            - containerPort: 27017
+          volumeMounts:
+            - name: mongodb
+              mountPath: /data/db
       volumes:
         - name: mongodb
           persistentVolumeClaim:
