--- a/K8S/events-depl.yaml
+++ b/K8S/events-depl.yaml
@@ -24,6 +24,8 @@ spec:
               value: "http://nannies-clusterip-srv:8080"
             - name: JWT_AUDIENCES
               value: "http://nannies-clusterip-srv:8080,http://students-clusterip-srv:8080,http://events-clusterip-srv:8080"
+            - name: EVENTS_BASE_URL
+              value: "http://events-clusterip-srv:8080"
 ---
 apiVersion: v1
 kind: Service
